fixed missing display:flex to align heading images vertically and horizontally

--- a/src/pages/experience/Experience.css
+++ b/src/pages/experience/Experience.css
@@ -16,6 +16,7 @@
 }
 
 .experience-heading-img-div {
+  display: flex;
   align-items: center;
   justify-content: center;
 }
