--- a/src/pages/projects/Projects.css
+++ b/src/pages/projects/Projects.css
@@ -17,6 +17,7 @@
 }
 
 .projects-heading-img-div {
+  display: flex;
   align-items: center;
   justify-content: center;
 }
